--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,192 @@
+@charset "utf-8";
+/* CSS Document */
+body {
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	color: #151515;
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+	background-color: #EFF5F8;
+	overflow-y: scroll;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0;
+    margin: 0;
+}
 
+#wrapper {
+	background-color: #FFFFFF;
+	background-image: url("spike.jpg");
+	background-repeat: no-repeat;
+	width: 100%;
+	min-width: 1432px;
+	min-height: 100%;
+	max-width: 1002px;
+	margin-left: auto;
+	margin-right: auto;
+	border-right-width: thin;
+	border-right-style: solid;
+	border-left-width: thin;
+	border-left-style: solid;
+	border-top: thin solid #000000;
+	max-height: 1400px;
+	position: relative;
+	padding-top: 2px;
+	padding-bottom: 2px;
+}
+#footer {
+	clear: both;
+	background-color: #000000;
+	border-top: thin solid #000000;
+	border-bottom: thin solid #000000;
+	clear: both;
+	position: relative;
+	z-index: 10;
+	height: 178px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	padding-top: 2px;
+}
+a {
+	font-weight: bold;
+	text-decoration: none;
+}
+a:link {
+	color: #000DFF;
+}
+a:visited {
+	color: #0200FF;
+}
+a:hover, a:active, a:focus {
+	text-decoration: underline;
+}
+#mainnav ul {
+	list-style-type: none;
+	margin-left: 32.5%;
+	padding-top: 0px;
+	padding-left: 0px;
+	padding-bottom: 0px;
+	padding-right: 0px;
+	border: thin solid #000000;
+	display: block;
+	margin-top: 10%;
+}
+#mainnav a:hover  , #mainnav a:active, #mainnav a:focus, #mainnav a.thispage{
+	background-color: #AEB193;
+	color: #000000;
+}
+
+#mainnav a {
+	float: left;
+	text-align: center;
+	background-color: #000000;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	border-bottom: thin solid #000000;
+	color: #FFFFFF;
+	display: block;
+	margin-left: 3%;
+	margin-right: 3%;
+}
+
+#wrapper #content #top {
+	background-color: rgb(0, 0, 0);
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: ;
+	height: 178px;
+	z-index: 4;
+	padding-left: 1%;
+	padding-top: 1%;
+	min-width: 1432px;
+	width: 100%;
+}
+.VOLUNTEER {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1569px;
+  height: 1080px;
+  z-index: 52;
+}
+.VOLUNTEER {
+  font-size: 23px;
+  font-family: "Myriad Pro";
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-align: center;
+  position: absolute;
+  left: 1364.904px;
+  top: 43.2px;
+  z-index: 51;
+}
+.Rounded_Rectangle_1 {
+  border-width: 3px;
+  border-color: rgb(255, 255, 255);
+  border-style: solid;
+  border-radius: 5px;
+  position: absolute;
+  left: 1314px;
+  top: 30px;
+  width: 211px;
+  height: 47px;
+  z-index: 50;
+}
+#Home {
+	font-size: 36px;
+	font-family: "Myriad Pro";
+	color: rgb(255, 255, 255);
+	line-height: 1.2;
+	text-align: left;
+	position: absolute;
+	left: 520.937px;
+	top: 113.9px;
+	z-index: 56;
+	width: 100%;
+}
+#Events {
+	font-size: 36px;
+	font-family: "Myriad Pro";
+	color: rgb(255, 255, 255);
+	line-height: 1.2;
+	text-align: left;
+	position: absolute;
+	left: 645.937px;
+	top: 115.9px;
+	z-index: 55;
+	width: 100%;
+}
+#Artists {
+	font-size: 36px;
+	font-family: "Myriad Pro";
+	color: rgb(255, 255, 255);
+	line-height: 1.2;
+	text-align: left;
+	position: absolute;
+	left: 779.938px;
+	top: 115.9px;
+	z-index: 54;
+	width: 100%;
+}
+#About_Us {
+	font-size: 32.32px;
+	font-family: "Myriad Pro";
+	color: rgb(255, 255, 255);
+	line-height: 1.2;
+	text-align: left;
+	position: absolute;
+	left: 910.937px;
+	top: 117.108px;
+	z-index: 53;
+	width: 100%;
+}
+#content #top img {
+	float: left;
+}
