just updating the styles.css

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ a:hover, a:active, a:focus {
 	position: absolute;
 	left: 0px;
 	top: 0px;
-	width: ;
+	width: 0px;
 	height: 189px;
 	z-index: 4;
 	padding-left: 1%;
