--- a/styles.css
+++ b/styles.css
@@ -55,18 +55,14 @@ a {
 	text-decoration: none;
 }
 a:link {
-	color: #000DFF;
 	border-top-left-radius: 0px;
-	display: block;
 }
 a:visited {
-	color: #0200FF;
 	border-top-left-radius: 10px;
 }
 a:hover, a:active, a:focus {
 	text-decoration: underline;
 	border-top-left-radius: 10px;
-	display: block;
 }
 #mainnav ul {
 	list-style-type: none;
@@ -262,6 +258,16 @@ image body {
 	font-size: xx-large;
 	margin-left: 54px;
 	position: relative;
+	margin-top: -385px;
+	float: left;
+}
+#wrapper body1_artists {
+	font-family: "Minion Pro";
+	font-style: italic;
+	color: #FFFFFF;
+	font-size: xx-large;
+	margin-left: 54px;
+	position: relative;
 	margin-top: -388px;
 	float: left;
 }
@@ -271,7 +277,23 @@ image body {
 	color: #FFFFFF;
 	text-align: left;
 }
+#wrapper #body1 #welcome1 {
+	font-family: "Minion Pro";
+	font-style: italic;
+	color: #FFFFFF;
+	text-align: left;
+}
+#wrapper #body1 #artist_name {
+	font-family: "Minion Pro";
+	font-style: italic;
+	color: #FFFFFF;
+	text-align: left;
+}
 #wrapper #welcome_img {
+	padding-top: 215px;
+	opacity: 0.65;
+}
+#wrapper #artists_background0 {
 	padding-top: 215px;
 	opacity: 0.65;
 }
@@ -407,6 +429,14 @@ image body {
 	float: left;
 	margin-top: -5px;
 	opacity: 0.4;
+
+}
+#wrapper #artists_background1 {
+	position: static;
+	float: left;
+	margin-top: -330px;
+	opacity: 0.4;
+	margin-left: 33px;
 
 }
 #wrapper #body3 #welcome {
@@ -590,4 +620,25 @@ image body {
 #footer #sponsors #sponsor3 {
 	margin-top: -87px;
 	margin-right: 9px;
+}
+#wrapper #body1_artists #artists_artist1 {
+	margin-top: 103px;
+	margin-bottom: -259px;
+	margin-left: 16px;
+}
+#wrapper #body1_artists #artist_name {
+	margin-left: 247px;
+	margin-bottom: -56px;
+	padding-top: 16px;
+}
+#body1_artists #artist_name #artists_events_text {
+	margin-top: 70px;
+
+}
+#artist_name #artists_events_text #event1_details {
+	margin-left: 300px;
+	margin-top: -77px;
+}
+#contact #links1 .nav-link {
+	color: #FFFFFF;
 }
