--- a/styles.css
+++ b/styles.css
@@ -38,17 +38,17 @@ body {
 }
 #footer {
 	background-color: #000000;
-	position: relative;
-	height: 180px;
 	position: static;
+	height: 180px;
 	width: 99.5%;
 	text-align: center;
 	font-family: "Minion Pro";
 	border: 4.95px solid #000000;
 	font-style: italic;
-	top: 147px;
 	float: left;
 	margin-top: -6px;
+	color: #FCFCFC;
+	top: 571px;
 }
 a {
 	font-weight: bold;
@@ -105,7 +105,7 @@ a:hover, a:active, a:focus {
 	background-size: 2000px 1000px;
 	background-position: 52% 46%;
 	max-height: 100%;
-	border: 4.95px solid #000000;
+	border: 4.95px none #000000;
 	font-style: italic;
 }
 #BUY_TICKETS {
@@ -138,6 +138,7 @@ a:hover, a:active, a:focus {
 	float: left;
 	margin-left: 8px;
 	margin-top: -9px;
+	border-style: none;
 }
 #content #top #PLAY_FOR_US {
 	color: #FFFFFF;
@@ -207,6 +208,7 @@ a:hover, a:active, a:focus {
 	text-align: left;
 	color: #FFFFFF;
 	font-style: italic;
+	position: static;
 }
 #wrapper #footer #footer_content1 {
 	color: #FFFFFF;
@@ -214,10 +216,13 @@ a:hover, a:active, a:focus {
 	font-style: italic;
 	margin-top: -12px;
 	margin-left: 16px;
+	float: left;
+	top: 0px;
+	position: relative;
 }
 body p {
 	position: absolute;
-	top: 184px;
+	top: 198px;
 	right: 0px;
 	left: 375px;
 	font-size: large;
@@ -270,6 +275,7 @@ image body {
 	position: relative;
 	margin-top: -388px;
 	float: left;
+	background-color: #FFFDFD;
 }
 #wrapper #body1 #welcome {
 	font-family: "Minion Pro";
@@ -296,6 +302,7 @@ image body {
 #wrapper #artists_background0 {
 	padding-top: 215px;
 	opacity: 0.65;
+	background-color: #FFFFFF;
 }
 #body1 #welcome #BECOME_A_VOLUNTEER_1 {
 	width: 300px;
@@ -585,6 +592,7 @@ image body {
 	padding-top: 0px;
 	margin-top: -127px;
 	margin-left: 464px;
+	position: static;
 }
 #footer #contact #links1 {
 	margin-left: 720px;
@@ -592,12 +600,15 @@ image body {
 	font-style: italic;
 	font-family: "Minion Pro";
 	font-size: xx-large;
+	color: #FFFFFF
 }
 #footer #contact #links2 {
 	font-family: "Minion Pro";
 	font-style: italic;
 	margin-left: 843px;
 	margin-top: -94px;
+	float: bottom;
+	color: #FFFFFF
 }
 #wrapper #footer #sponsors {
 	margin-top: -142px;
@@ -625,6 +636,9 @@ image body {
 	margin-top: 103px;
 	margin-bottom: -259px;
 	margin-left: 16px;
+	position: absolute;
+	top: 0px;
+	background-color: #FFFFFF;
 }
 #wrapper #body1_artists #artist_name {
 	margin-left: 247px;
@@ -641,4 +655,52 @@ image body {
 }
 #contact #links1 .nav-link {
 	color: #FFFFFF;
+}
+body img {
+	top: 15px;
+}
+.image2 {
+	position: absolute;
+	top: 213px;
+	left: 0px;
+	opacity: 0.73;
+	height: 647px;
+	background-color: #FCFCFC;
+	width: 1698px;
+}
+.image3 {
+	position: absolute;
+	top: 226px;
+	left: 26px;
+	opacity: 0.49;
+}
+.body_content {
+	position: relative;
+	top: 366px;
+	left: 549px;
+	color: #FFFFFF;
+}
+.image4 {
+	position: absolute;
+	top: 512px;
+	right: 0px;
+	left: 30px;
+	opacity: 1;
+	width: 608px;
+	height: 410px;
+}
+.body_content2 {
+	position: relative;
+	top: 376px;
+	left: 30px;
+	color: #171717;
+}
+.body_content3 {
+	position: absolute;
+	top: 494px;
+	left: 709px;
+	color: #000000;
+	font-size: large;
+	text-align: justify;
+	right: -24px;
 }
